# bimap

./: .gitignore  AGENTS.md  ARCHI.MD  Cargo.toml  Dockerfile  README.MD  ROADMAP.MD  TESTING.MD  USAGE.MD  test_all.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
labs/clab/: README.md  bimap.clab.yml  demo-record.sh  demo.tmux.sh  firewall.nft
src/: cli.rs  lib.rs  main.rs  orchestrator.rs  output.rs
src/control/: mod.rs  msg.rs  tls.rs
src/packet/: dns.rs  icmp.rs  ip.rs  mod.rs  tcp.rs  udp.rs
src/test/: dns.rs  icmp.rs  mod.rs  port.rs  tls_test.rs
tests/: e2e.rs  fault.rs  integration.rs
