[package]
name = "bimap"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "bimap"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[test]]
name = "fault"
path = "tests/fault.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
sha2 = "0.10"
async-trait = "0.1"
libc = "0.2"
hickory-proto = "0.24"
pnet_packet = "0.34"

[profile.release]
opt-level = 2
lto = true
